# TuringMachine

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  parse.rs  parsing.rs
src/parse/: tests.rs
src/parse/tests/: snippets.rs  units.rs
src/parse/tests/snippets/: zero.out
src/parsing/tests/: snippets.rs
