[package]
name = "turing-machine"
version = "0.0.2"
edition = "2021"
authors = ["Pavel Grogorenko <grigorenkopv@ya.ru>"]
description = "Turing machine emulator"

[dependencies]
anyhow = "1.0.66"
chumsky = { version = "0.8.0", default-features = false }
clap = { version = "4.0", features = [
    "color",
    "help",
    "std",
    # "suggestions",
    "usage",
    "cargo",
    "derive",
    "wrap_help",
    "unicode",
], default-features = false }
