[package]
name = "turing-machine"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Grogorenko <grigorenkopv@ya.ru>"]
description = "Turing machine emulator"


[dependencies]
anyhow = "1.0"

[dependencies.chumsky]
version = "0.8"
default-features = false

[dependencies.clap]
version = "4.0"
default-features = false
features = [
    "color",
    "help",
    "std",
    # "suggestions",
    "usage",
    "cargo",
    "derive",
    "wrap_help",
    "unicode",
]
